@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -36,11 +37,17 @@ public class ShopService {
         return new ShopResponseDto(checkShop(shop_id));
     }
 
-    public List<ShopResponseDto> getShops() {
-        return shopRepository.findAllByOrderByModifiedAtDesc().stream().map(ShopResponseDto::new).toList();
+    //public List<ShopResponseDto> getShops() {
+    //return shopRepository.findAllByOrderByCreatedAtDesc().stream().map(ShopResponseDto::new).toList();
+    //}
+    public ShopResponseDto getShops() {
+        List<ShopResponseDto> shopList = shopRepository.findAll().stream()
+                .map(ShopResponseDto::new)
+                .collect(Collectors.toList());
+        return new ShopResponseDto(shopList);
     }
 
-//    public static ShopResponseDto updateShop(Long shopId, ShopRequestDto shopRequestDto) {
+    //    public static ShopResponseDto updateShop(Long shopId, ShopRequestDto shopRequestDto) {
 //        Shop shop = ShopRepository.findById(shopId).orElseThrow(() ->
 //                new NullPointerException("해당 가게는 존재하지 않습니다.")
 //        );
@@ -55,23 +62,23 @@ public class ShopService {
 ////    }
     public ShopResponseDto updateShop(Long shop_id, ShopRequestDto shopRequestDto,UserDetailsImpl userDetails) {
         Shop shop = checkShop(shop_id);
-            if(shop.getId().equals(userDetails.getUser().getId())){
-                shop.update(shopRequestDto);
-            }else {
-                throw new IllegalArgumentException("작성자만 수정할 수 있습니다.");
-            }
-            return new ShopResponseDto(shop);
+        if(shop.getUser().getId().equals(userDetails.getUser().getId())){
+            shop.update(shopRequestDto);
+        }else {
+            throw new IllegalArgumentException("작성자만 수정할 수 있습니다.");
         }
+        return new ShopResponseDto(shop);
+    }
 
-        public ShopResponseDto deleteShop(Long id, UserDetailsImpl userDetails) {
-            Shop shop = checkShop(id);
-            if(shop.getId().equals(userDetails.getUser().getId())){
-                shopRepository.delete(shop);
-            }else {
-                throw new IllegalArgumentException("작성자만 삭제할 수 있습니다.");
-            }
-            return new ShopResponseDto(shop);
+    public ShopResponseDto deleteShop(Long id, UserDetailsImpl userDetails) {
+        Shop shop = checkShop(id);
+        if(shop.getUser().getId().equals(userDetails.getUser().getId())){
+            shopRepository.delete(shop);
+        }else {
+            throw new IllegalArgumentException("작성자만 삭제할 수 있습니다.");
         }
+        return new ShopResponseDto(shop);
+    }
 
     private Shop checkShop(Long id) {
         Shop shop = shopRepository.findById(id).orElseThrow(() -> new NullPointerException("가게가 존재하지 않습니다."));
